<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/bn_item_graph"
            android:enabled="true"
            android:icon="@drawable/ic_graph_with_padding"
            app:showAsAction="ifRoom"
            android:title="@string/graph"/>

    <item
            android:id="@+id/bn_item_table"
            android:enabled="true"
            android:icon="@drawable/ic_table_with_padding"
            app:showAsAction="ifRoom"
            android:title="@string/table"/>

    <item
            android:id="@+id/bn_item_list"
            android:enabled="true"
            android:icon="@drawable/ic_list"
            app:showAsAction="ifRoom"
            android:title="@string/list"/>
</menu>