<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorFoodPrimary"
        android:paddingBottom="@dimen/dimen_2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="60dp"-->
<!--                                                  android:layout_height="32dp"-->
<!--                                                  android:padding="8dp"-->

<!--                                                  android:id="@+id/image_food_h"-->
<!--                                                  app:layout_constraintStart_toStartOf="parent"-->
<!--                                                  android:layout_marginStart="8dp"-->
<!--                                                  android:layout_marginTop="8dp"-->
<!--                                                  app:layout_constraintTop_toTopOf="parent"-->
<!--                                                  android:layout_marginBottom="8dp"-->
<!--                                                  app:layout_constraintBottom_toBottomOf="parent"-->
<!--                                                  app:layout_constraintVertical_bias="0.027"/>-->

    <TextView android:layout_width="0dp"
              android:layout_height="32dp"
              android:background="@color/colorLiteText"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="16sp"
              android:gravity="center"
              android:text="Название продукта"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias="1.0"
              app:layout_constraintEnd_toStartOf="@+id/textView8"
              app:layout_constraintStart_toStartOf="parent"/>
    <TextView android:layout_width="40dp"
              android:layout_height="0dp"
              android:padding="@dimen/dimen_8"
              android:textSize="10sp"
              android:gravity="fill_vertical"
              android:background="@color/colorFoodPrimary"
              android:text="@string/proteins"
              app:layout_constraintEnd_toStartOf="@+id/textView7"
              app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView8"
              app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView android:layout_width="40dp"
              android:layout_height="0dp"
              android:padding="@dimen/dimen_8"
              android:textSize="10sp"
              android:gravity="fill_vertical"
              android:text="@string/fasts"
              android:background="@color/colorLiteText"
              app:layout_constraintEnd_toStartOf="@+id/textView6"
              app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView7"
              app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView android:layout_width="40dp" android:layout_height="0dp"
              android:padding="@dimen/dimen_8"
              android:textSize="10sp"
              android:gravity="fill_vertical"
              android:background="@color/colorFoodPrimary"
              android:text="@string/carbohydrates"
              app:layout_constraintEnd_toStartOf="@+id/textView5"
              app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView6"
              app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView android:layout_width="40dp" android:layout_height="0dp"
              android:padding="@dimen/dimen_8"
              android:textSize="10sp"
              android:background="@color/colorLiteText"
              android:gravity="fill_vertical"
              android:text="@string/calories"
              android:id="@+id/textView5"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>