<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginTop="@dimen/dimen_8"

                                   android:padding="@dimen/dimen_8">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/tables_exercise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/exercise_im"
                                                          android:layout_width="@dimen/dimen_32"
                                                          android:layout_height="@dimen/dimen_32"
                                                          android:layout_margin="@dimen/dimen_16"/>
            <TextView
                    android:id="@+id/graph_title_exercise_name"
                    android:textColor="@color/colorDarkText"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/exercise_name"
                    android:textSize="18sp"/>
        </LinearLayout>


        <HorizontalScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/tables_exercise_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout android:layout_width="250dp"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="match_parent"
                              android:layout_height="@dimen/dimen_32"
                              android:textSize="12sp"
                              android:textColor="@color/colorPrimary"
                              android:text="@string/count_repeat"
                              android:gravity="bottom"
                              android:layout_marginStart="@dimen/dimen_8"/>
                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginLeft="@dimen/dimen_8"
                            android:layout_marginRight="@dimen/dimen_8"
                            android:layout_marginBottom="@dimen/dimen_8"
                            android:id="@+id/rec_view_exercise_count"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout android:layout_width="250dp" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="match_parent"
                              android:layout_height="@dimen/dimen_32"
                              android:textSize="12sp"
                              android:textColor="@color/colorPrimary"
                              android:text="@string/average_value"
                              android:gravity="bottom"
                              android:layout_marginStart="@dimen/dimen_8"/>
                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginLeft="@dimen/dimen_8"
                            android:layout_marginRight="@dimen/dimen_8"
                            android:layout_marginBottom="@dimen/dimen_8"
                            android:id="@+id/rec_view_exercise_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout android:layout_width="250dp" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView android:layout_width="match_parent"
                              android:layout_height="@dimen/dimen_32"
                              android:textSize="12sp"
                              android:textColor="@color/colorPrimary"
                              android:text="@string/count_value"
                              android:gravity="bottom"
                              android:layout_marginStart="@dimen/dimen_8"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginLeft="@dimen/dimen_8"
                            android:layout_marginRight="@dimen/dimen_8"
                            android:layout_marginBottom="@dimen/dimen_8"
                            android:id="@+id/rec_view_exercise_count_and_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>
