<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="@drawable/exercise_info_background"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="@dimen/dimen_100"
                                                  android:layout_height="@dimen/dimen_100"
                                                  android:layout_marginTop="16dp"
                                                  android:src="@drawable/ic_photo_camera"

                                                  android:elevation="10dp"

                                                  app:layout_constraintTop_toBottomOf="@+id/workout_dialog_title"
                                                  app:layout_constraintStart_toStartOf="parent"
                                                  android:layout_marginStart="8dp"
                                                  app:layout_constraintEnd_toEndOf="parent"
                                                  android:layout_marginEnd="8dp" android:id="@+id/workout_photo"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAlignment="center"
              android:textColor="@color/colorDarkText"
              android:textSize="18dp"
              android:text="@string/add_new_workout" android:layout_marginTop="16dp"
              app:layout_constraintTop_toTopOf="parent" android:id="@+id/workout_dialog_title"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:hint="@string/workout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="150"
            android:textSize="14sp"

            android:elevation="10dp"

            android:id="@+id/editText_workout_name"
            android:background="@drawable/edit_text_background"

            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_photo"/>

    <EditText
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:hint="@string/workout_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:textSize="14sp"

            android:elevation="10dp"

            android:id="@+id/editText_workout_description"
            android:background="@drawable/edit_text_background"

            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_workout_name" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
    />

    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Для девушек"
              android:buttonTint="@color/colorPrimary"
              app:layout_constraintTop_toBottomOf="@+id/editText_workout_description"
              app:layout_constraintStart_toStartOf="@+id/editText_workout_description"
              android:layout_marginStart="8dp" android:id="@+id/checkBoxForGirl"/>


    <TextView android:layout_width="100dp"
              android:elevation="@dimen/elevation"
              android:stateListAnimator="@xml/animate_press"
              android:textAlignment="center"
              android:padding="12dp"
              android:id="@+id/button_workout_add"
              android:layout_height="wrap_content"
              android:text="@string/add"
              android:textColor="@color/colorLiteText"
              android:background="@drawable/dialog_button"
              app:layout_constraintStart_toStartOf="@+id/textView12"
              app:layout_constraintEnd_toEndOf="@+id/textView12" android:layout_marginBottom="16dp"
              app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView android:layout_width="100dp"
              android:textAlignment="center"
              android:padding="12dp"

              android:layout_height="wrap_content"
              android:text="@string/add"
              android:textColor="@color/colorLiteText"
              android:background="@drawable/dialog_button_light"
              android:id="@+id/textView12"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/checkBoxForGirl" android:layout_marginBottom="16dp"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView13"/>

    <TextView android:layout_width="100dp"
              android:padding="12dp"
              android:textAlignment="center"
              android:layout_height="wrap_content"
              android:text="@string/cancel"
              android:textColor="@color/colorLiteText"
              android:background="@drawable/dialog_button_light"
              android:id="@+id/textView13"
              app:layout_constraintTop_toTopOf="@+id/textView12"
              app:layout_constraintBottom_toBottomOf="@+id/textView12"
              app:layout_constraintStart_toEndOf="@+id/textView12" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent"/>


    <TextView android:layout_width="100dp"
              android:padding="12dp"
              android:elevation="@dimen/elevation"
              android:stateListAnimator="@xml/animate_press"
              android:textAlignment="center"
              android:id="@+id/button_workout_cancel"
              android:layout_height="wrap_content"
              android:text="@string/cancel"
              android:textColor="@color/colorLiteText"
              android:background="@drawable/dialog_button"
              app:layout_constraintStart_toStartOf="@+id/textView13"
              app:layout_constraintEnd_toEndOf="@+id/textView13"
              app:layout_constraintBottom_toBottomOf="@+id/textView13"/>

</androidx.constraintlayout.widget.ConstraintLayout>