<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ExerciseDescriptionActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@drawable/toolbar_bottom_border"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/colorLiteText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/wait_progress_bar"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/exercise_header"
                  android:id="@+id/exercise_dialog_header"
                  android:textColor="@color/colorDarkText"
                  android:textSize="18sp"
                  android:gravity="center"
                  android:layout_marginStart="16dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

        <com.builderlinebr.smarttrainer.customviews.CustomImageViewRadius


                android:layout_width="120dp"
                android:layout_height="180dp"
                android:id="@+id/exercise_m_image"
                app:layout_constraintTop_toTopOf="@+id/exercise_dialog_image"
                app:layout_constraintBottom_toBottomOf="@+id/exercise_dialog_image"
                app:layout_constraintVertical_bias="0.466"
                app:layout_constraintStart_toEndOf="@+id/exercise_dialog_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>

        <com.builderlinebr.smarttrainer.customviews.CustomImageViewRadius

                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/exercise_dialog_image"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/exercise_dialog_header"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/exercise_m_image"
        />


        <TextView
                android:id="@+id/exercise_description_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingTop="@dimen/dimen_16"
                android:text="@string/exercise_full_description"
                android:textColor="@color/colorDarkText"
                android:paddingStart="@dimen/dimen_16"
                android:paddingLeft="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:paddingBottom="@dimen/dimen_16"
                android:scrollbars="vertical"
                android:isScrollContainer="true"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/exercise_dialog_image"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/adView"/>

        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ad_id"
                tools:layout_editor_absoluteX="0dp"
                ads:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp">
        </com.google.android.gms.ads.AdView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

